Fixed some layout bugs

--- a/css/scss/_sidebar.scss
+++ b/css/scss/_sidebar.scss
@@ -18,6 +18,7 @@
 .sidebar-content {
     width: $sidebar-width + 0.0625rem;
     height: 92vh;
+    overflow: hidden;
 }
 
 .sidebar-header {
